<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grizzly Map</string>
    <string name="str_area_map">Georgia Gwinnett College Area Map</string>
    <string name="str_campus_map">Georgia Gwinnett College Campus Map</string>
    <string name="str_about">About</string>
    <string name="title_activity_area_map">AreaMapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_campus_map">CampusMapActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="str_created">Created By</string>
    <string name="str_avatar">Avatar</string>
    <string name="str_raj">Raj Ramsaroop</string>
    <string name="str_itec">ITEC 4550</string>
    <string name="str_fall">Fall 2014</string>

</resources>
